# uber-mcp

./: .env.example  .gitignore  LEARNINGS.md  README.md  main.py  pyproject.toml  setup_auth.py  setup_browser.py
agent/: cli_agent.py
docs/: CODING_GUIDELINES.md  DEVELOPMENT_STEPS.md  SYSTEM_DESIGN.md  UBER_API_REFERENCE.md
src/: auth_manager.py  browser_actions.py  browser_provider.py  browser_session.py  geocoding_client.py  mock_provider.py  provider.py  server.py  state_manager.py  uber_client.py  uber_errors.py
src/tools/: auth.py  cancel_ride.py  geocode.py  request_ride.py  ride_history.py  ride_options.py  ride_status.py
transcripts/: 01_basic_booking.md  02_compare_options.md  03_cancel_ride.md  04_error_handling.md  05_multi_step.md  2026-03-27_2320_book_an_uber_from_791.md  2026-03-27_2331_book_an_uber_from_791.md  2026-03-27_2356_book_an_uber_from_791.md  2026-03-28_0000_book_an_uber_from_791.md  2026-03-28_0011_book_an_uber_from_791.md  2026-03-28_1639_book_an_uber_from_791.md  2026-03-28_1646_book_an_uber_from_791.md  2026-03-28_1711_get_me_a_comfort_ride.md  2026-03-28_1724_book_an_uber_from_times.md  2026-03-28_1735_book_an_uber_from_asdfghjkl.md  2026-03-29_1450_book_an_uber_from_columbia.md  2026-03-29_1453_i_need_to_get_to.md
